# FoodcamClassifier

./: CMakeLists.txt  README  build_vocabolary.cpp  build_vocabolary.h  foodcam_predict.cpp  kmeans_trainer.cpp  kmeans_trainer.h  main.cpp  make_test_background_image.cpp  make_test_background_image.h  manual_classifier.cpp  predict_common.cpp  predict_common.h  test.txt  test_classifiers.cpp  test_classifiers.h  test_one_class.txt  test_one_class_rects.txt  train_SVM_alone.cpp  train_bovw.cpp  train_bovw.h  training.txt  training_common.cpp
FoodcamClassifier.xcodeproj/: project.pbxproj
